--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,16 @@ Name=File::BOM::Utils
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.01]
+Date=2015-09-02T17:40:00
+Comments= <<EOT
+- Fix docs in Util.pm which wrongly said lower-case bom names were ok.
+- Fix docs in bommer.pl for the same reason.
+- Change output of test() method slightly, so 'Name' now says 'BOM name'.
+- Remove Build.PL.
+- Switch pre-req from File::Slurp to File::Slurper.
+EOT
+
 [V 1.00]
 Date=2015-06-24T12:09:00
 Comments=- Original version
