Move .gitignore from MANIFEST to MANIFEST.SKIP to stop make dist forcing it into MANIFEST

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -11,6 +11,7 @@ Comments= <<EOT
 - Change output of test() method slightly, so 'Name' now says 'BOM name'.
 - Remove Build.PL.
 - Switch pre-req from File::Slurp to File::Slurper.
+- Move .gitignore from MANIFEST to MANIFEST.SKIP.
 EOT
 
 [V 1.00]
