Fix syntax error

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=File::BOM::Utils
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 1.02]
+Date=2015-09-06T16:01:00
+Comments=- Fix typo causing syntax error.
+
 [V 1.01]
 Date=2015-09-02T17:40:00
 Comments= <<EOT
