--- a/Changelog.ini
+++ b/Changelog.ini
@@ -5,7 +5,10 @@ Changelog.Parser=Config::IniFiles V 2.83
 
 [V 1.02]
 Date=2015-09-06T16:01:00
-Comments=- Fix typo causing syntax error.
+Comments= <<EOT
+- Fix typo causing syntax error.
+- Fix call which used write_binary instead of write_text.
+EOT
 
 [V 1.01]
 Date=2015-09-02T17:40:00
