--- a/Changelog.ini
+++ b/Changelog.ini
@@ -8,6 +8,7 @@ Date=2015-09-06T16:01:00
 Comments= <<EOT
 - Fix typo causing syntax error.
 - Fix call which used write_binary instead of write_text.
+- Update docs.
 EOT
 
 [V 1.01]
